P2 TALF/moronico/c-sharpie.output
Terminals unused in grammar

   DESPI
   DESPD
   LE
   GE
   AND
   OR


Estado 436 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: modulo $end

    1 declaracionMasUno: declaracionMasUno declaracion
    2                  | declaracion

    3 directiva_usoMasUno: directiva_usoMasUno directiva_uso
    4                    | directiva_uso

    5 modulo: directiva_usoMasUno declaracionMasUno
    6       | declaracionMasUno

    7 declaracion: declaracion_espacio_nombres
    8            | declaracion_variable
    9            | declaracion_tipo
   10            | declaracion_funcion

   11 directiva_uso: USING IDENTIFICADOR '=' nombre_tipo_o_espacio_nombres ';'
   12              | USING nombre_tipo_o_espacio_nombres ';'

   13 identificador_con_tiposMasUno: identificador_con_tiposMasUno IDENTIFICADOR '.'
   14                              | IDENTIFICADOR '.'

   15 nombre_tipo_o_espacio_nombres: identificador_con_tiposMasUno identificador_con_tipos
   16                              | identificador_con_tipos

   17 nombre_tipo_o_espacio_nombresMasUno: nombre_tipo_o_espacio_nombresMasUno ',' nombre_tipo_o_espacio_nombres
   18                                    | nombre_tipo_o_espacio_nombres

   19 identificador_con_tipos: IDENTIFICADOR
   20                        | IDENTIFICADOR '(' nombre_tipo_o_espacio_nombresMasUno ')'

   21 declaracion_espacio_nombres: NAMESPACE identificador_anidado bloque_espacio_nombres
   22                            | error ';'

   23 identificador_anidado: identificador_con_tiposMasUno IDENTIFICADOR
   24                      | IDENTIFICADOR

   25 bloque_espacio_nombres: '{' declaracionMasUno '}'
   26                       | '{' directiva_usoMasUno declaracionMasUno '}'

   27 nombreMasUno: nombreMasUno ',' nombre
   28             | nombre

   29 declaracion_variable: tipo nombreMasUno ';'

   30 tipo: '<' nombre_tipo_o_espacio_nombres '>'
   31     | tipo_escalar

   32 tipo_escalar: signo longitud tipo_basico
   33             | signo tipo_basico
   34             | longitud tipo_basico
   35             | tipo_basico

   36 longitud: SHORT
   37         | LONG

   38 signo: SIGNED
   39      | UNSIGNED

   40 tipo_basico: CHAR
   41            | INT
   42            | FLOAT
   43            | DOUBLE
   44            | BOOLEAN

   45 nombre: dato '=' valor
   46       | dato
   47       | error ';'

   48 asteriscoMasUno: asteriscoMasUno '*'
   49                | '*'

   50 dato: asteriscoMasUno dato_indexado
   51     | dato_indexado

   52 corchetesMasUnoCon0OMasexpr: '[' expresionMasUno ']'
   53                            | corchetesMasUnoCon0OMasexpr '[' expresionMasUno ']'

   54 dato_indexado: IDENTIFICADOR corchetesMasUnoCon0OMasexpr
   55              | IDENTIFICADOR

   56 valorMasUno: valorMasUno ',' valor
   57            | valor
   58            | /* vacío */

   59 valor: expresion
   60      | '[' valorMasUno ']'

   61 declaracion_tipo: nombramiento_tipo
   62                 | declaracion_struct_union
   63                 | declaracion_interfaz
   64                 | declaracion_enum
   65                 | declaracion_clase

   66 nombramiento_tipo: TYPEDEF tipo IDENTIFICADOR ';'

   67 declaracion_campoMasUno: declaracion_campoMasUno declaracion_campo
   68                        | declaracion_campo

   69 declaracion_struct_union: struct_union '{' declaracion_campoMasUno '}'
   70                         | struct_union IDENTIFICADOR '{' declaracion_campoMasUno '}'
   71                         | modificadorMasUno struct_union '{' declaracion_campoMasUno '}'
   72                         | modificadorMasUno IDENTIFICADOR '{' declaracion_campoMasUno '}'

   73 modificador: NEW
   74            | PUBLIC
   75            | PROTECTED
   76            | INTERNAL
   77            | PRIVATE
   78            | STATIC
   79            | VIRTUAL
   80            | SEALED
   81            | OVERRIDE
   82            | ABSTRACT
   83            | EXTERN

   84 struct_union: STRUCT
   85             | UNION

   86 declaracion_campo: tipo nombreMasUno ';'
   87                  | declaracion_struct_union nombreMasUno ';'

   88 modificadorMasUno: modificadorMasUno modificador
   89                  | modificador

   90 declaracion_interfaz: INTERFACE IDENTIFICADOR cuerpo_interfaz
   91                     | INTERFACE IDENTIFICADOR herencia cuerpo_interfaz
   92                     | modificadorMasUno INTERFACE IDENTIFICADOR cuerpo_interfaz
   93                     | modificadorMasUno INTERFACE IDENTIFICADOR herencia cuerpo_interfaz

   94 herencia: ':' nombre_tipo_o_espacio_nombresMasUno

   95 declaracion_metodo_interfazMasUno: declaracion_metodo_interfazMasUno declaracion_metodo_interfaz
   96                                  | declaracion_metodo_interfaz

   97 cuerpo_interfaz: '{' declaracion_metodo_interfazMasUno '}'
   98                | '{' '}'

   99 declaracion_metodo_interfaz: firma_funcion ';'
  100                            | NEW firma_funcion ';'

  101 declaracion_enum: ENUM IDENTIFICADOR ':' tipo_escalar cuerpo_enum
  102                 | ENUM IDENTIFICADOR cuerpo_enum
  103                 | modificadorMasUno ENUM IDENTIFICADOR ':' tipo_escalar cuerpo_enum
  104                 | modificadorMasUno ENUM IDENTIFICADOR ':' cuerpo_enum

  105 declaracion_miembro_enumMasUno: declaracion_miembro_enumMasUno declaracion_miembro_enum
  106                               | declaracion_miembro_enum

  107 cuerpo_enum: '{' declaracion_miembro_enumMasUno '}'

  108 declaracion_miembro_enum: IDENTIFICADOR '=' expresion
  109                         | IDENTIFICADOR

  110 declaracion_clase: modificadorMasUno CLASS IDENTIFICADOR cuerpo_clase
  111                  | CLASS IDENTIFICADOR cuerpo_clase
  112                  | modificadorMasUno CLASS IDENTIFICADOR herencia cuerpo_clase
  113                  | CLASS IDENTIFICADOR herencia cuerpo_clase

  114 declaracion_elemento_claseMasUno: declaracion_elemento_clase
  115                                 | declaracion_elemento_claseMasUno declaracion_elemento_clase

  116 cuerpo_clase: '{' declaracion_elemento_claseMasUno '}'

  117 declaracion_elemento_clase: declaracion_tipo
  118                           | declaracion_atributo
  119                           | declaracion_metodo
  120                           | declaracion_constructor
  121                           | declaracion_destructor

  122 declaracion_atributo: modificadorMasUno declaracion_variable
  123                     | declaracion_variable

  124 declaracion_metodo: modificadorMasUno firma_funcion bloque_instrucciones
  125                   | firma_funcion bloque_instrucciones

  126 declaracion_constructor: modificadorMasUno cabecera_constructor bloque_instrucciones
  127                        | cabecera_constructor bloque_instrucciones

  128 cabecera_constructor: IDENTIFICADOR parametros inicializador_constructor
  129                     | IDENTIFICADOR inicializador_constructor
  130                     | IDENTIFICADOR parametros

  131 inicializador_constructor: ':' BASE parametros
  132                          | ':' THIS parametros

  133 declaracion_destructor: modificadorMasUno cabecera_destructor bloque_instrucciones
  134                       | cabecera_destructor bloque_instrucciones

  135 cabecera_destructor: '~' IDENTIFICADOR '(' ')'

  136 declaracion_funcion: firma_funcion bloque_instrucciones

  137 firma_funcion: VOID IDENTIFICADOR parametros
  138              | tipo asteriscoMasUno IDENTIFICADOR parametros
  139              | tipo IDENTIFICADOR parametros

  140 argumentosMasUno: argumentosMasUno argumentos ';'
  141                 | argumentos ';'

  142 parametros: '(' argumentosMasUno argumentos ')'
  143           | '(' argumentos ')'
  144           | '(' ')'

  145 variableMasUno: variableMasUno ',' variable
  146               | variable

  147 argumentos: nombre_tipo variableMasUno

  148 nombre_tipo: tipo asteriscoMasUno
  149            | tipo

  150 variable: IDENTIFICADOR '=' expresion
  151         | IDENTIFICADOR

  152 instruccion: bloque_instrucciones
  153            | instruccion_expresion
  154            | instruccion_bifurcacion
  155            | instruccion_bucle
  156            | instruccion_salto
  157            | instruccion_destino_salto
  158            | instruccion_retorno
  159            | instruccion_lanzamiento_excepcion
  160            | instruccion_captura_excepcion
  161            | instruccion_vacia

  162 instruccionMasUno: instruccionMasUno instruccion
  163                  | instruccion

  164 bloque_instrucciones: '{' declaracionMasUno instruccionMasUno '}'
  165                     | '{' declaracionMasUno '}'
  166                     | '{' instruccionMasUno '}'
  167                     | '{' '}'

  168 instruccion_expresion: expresion_funcional ';'
  169                      | asignacion ';'

  170 asignacion: expresion_indexada operador_asignacion expresion

  171 operador_asignacion: EQ
  172                    | MULT_ASIG
  173                    | DIV_ASIG
  174                    | MOD_ASIG
  175                    | SUMA_ASIG
  176                    | RESTA_ASIG
  177                    | DESPI_ASIG
  178                    | DESPD_ASIG
  179                    | AND_ASIG
  180                    | XOR_ASIG
  181                    | OR_ASIG

  182 instruccion_casoMasUno: instruccion_casoMasUno ',' instruccion_caso
  183                       | instruccion_caso

  184 instruccion_bifurcacion: IF '(' expresion ')' instruccion
  185                        | IF '(' expresion ')' instruccion ELSE instruccion
  186                        | SWITCH '(' expresion ')' '{' instruccion_casoMasUno '}'

  187 instruccion_caso: CASE expresion ':' instruccion
  188                 | DEFAULT ':' instruccion

  189 asignacionMasUno: asignacionMasUno asignacion
  190                 | asignacion

  191 instruccion_bucle: WHILE '(' expresion ')' instruccion
  192                  | DO instruccion WHILE '(' expresion ')' ';'
  193                  | FOR '(' ';' expresion ';' ')' instruccion
  194                  | FOR '(' asignacionMasUno ';' expresion ';' expresionMasUno ')' instruccion
  195                  | FOR '(' ';' expresion ';' expresionMasUno ')' instruccion
  196                  | FOR '(' asignacionMasUno ';' expresion ';' ')' instruccion

  197 instruccion_salto: GOTO IDENTIFICADOR ';'
  198                  | CONTINUE ';'
  199                  | BREAK ';'

  200 instruccion_destino_salto: IDENTIFICADOR ':' instruccion ';'

  201 instruccion_retorno: RETURN ';'
  202                    | RETURN expresion ';'

  203 instruccion_lanzamiento_excepcion: THROW expresion ';'

  204 instruccion_captura_excepcion: TRY bloque_instrucciones clausulas_catch
  205                              | TRY bloque_instrucciones clausula_finally
  206                              | TRY bloque_instrucciones clausulas_catch clausula_finally

  207 clausula_catch_especificaMasUno: clausula_catch_especificaMasUno clausula_catch_especifica
  208                                | clausula_catch_especifica

  209 clausulas_catch: clausula_catch_especificaMasUno
  210                | clausula_catch_general
  211                | clausula_catch_especificaMasUno clausula_catch_general
  212                | error ';'

  213 clausula_catch_especifica: CATCH '(' nombre_tipo ')' bloque_instrucciones

  214 clausula_catch_general: CATCH bloque_instrucciones

  215 clausula_finally: FINALLY bloque_instrucciones

  216 instruccion_vacia: ';'

  217 expresion_logica: expresion_cast

  218 expresion: expresion_logica '?' expresion ':' expresion
  219          | expresion_logica

  220 expresionMasUno: expresionMasUno ',' expresion
  221                | expresion

  222 expresion_constante: ENTERO
  223                    | REAL
  224                    | CADENA
  225                    | CARACTER
  226                    | TRUE
  227                    | FALSE

  228 expresion_parentesis: '(' expresion ')'

  229 expresion_funcional: identificador_anidado '(' expresionMasUno ')'
  230                    | identificador_anidado '(' ')'

  231 expresion_creacion_objeto: NEW identificador_anidado '(' expresionMasUno ')'
  232                          | NEW identificador_anidado '(' ')'

  233 expresion_indexada: identificador_anidado
  234                   | expresion_indexada '[' expresion ']'
  235                   | expresion_indexada PTR_ACCESO identificador_anidado

  236 expresion_postfija: expresion_constante
  237                   | expresion_parentesis
  238                   | expresion_funcional
  239                   | expresion_creacion_objeto
  240                   | expresion_indexada
  241                   | expresion_postfija INC
  242                   | expresion_postfija DEC

  243 expresion_prefija: expresion_postfija
  244                  | SIZEOF expresion_prefija
  245                  | SIZEOF '(' nombre_tipo ')'
  246                  | operador_prefijo expresion_cast

  247 operador_prefijo: INC
  248                 | DEC
  249                 | '&'
  250                 | '*'
  251                 | SUMA_ASIG
  252                 | '-'
  253                 | '~'
  254                 | NEQ

  255 expresion_cast: expresion_prefija
  256               | '(' nombre_tipo ')' expresion_prefija


Terminales con las reglas donde aparecen

$end (0) 0
'&' (38) 249
'(' (40) 20 135 142 143 144 184 185 186 191 192 193 194 195 196 213
    228 229 230 231 232 245 256
')' (41) 20 135 142 143 144 184 185 186 191 192 193 194 195 196 213
    228 229 230 231 232 245 256
'*' (42) 48 49 250
',' (44) 17 27 56 145 182 220
'-' (45) 252
'.' (46) 13 14
':' (58) 94 101 103 104 131 132 187 188 200 218
';' (59) 11 12 22 29 47 66 86 87 99 100 140 141 168 169 192 193 194
    195 196 197 198 199 200 201 202 203 212 216
'<' (60) 30
'=' (61) 11 45 108 150
'>' (62) 30
'?' (63) 218
'[' (91) 52 53 60 234
']' (93) 52 53 60 234
'{' (123) 25 26 69 70 71 72 97 98 107 116 164 165 166 167 186
'}' (125) 25 26 69 70 71 72 97 98 107 116 164 165 166 167 186
'~' (126) 135 253
error (256) 22 47 212
ABSTRACT (258) 82
BASE (259) 131
BOOLEAN (260) 44
BREAK (261) 199
CASE (262) 187
CATCH (263) 213 214
CHAR (264) 40
CLASS (265) 110 111 112 113
CONTINUE (266) 198
DEFAULT (267) 188
DO (268) 192
DOUBLE (269) 43
ELSE (270) 185
ENUM (271) 101 102 103 104
EXTERN (272) 83
FINALLY (273) 215
FLOAT (274) 42
FOR (275) 193 194 195 196
GOTO (276) 197
IF (277) 184 185
INT (278) 41
INTERFACE (279) 90 91 92 93
INTERNAL (280) 76
LONG (281) 37
NAMESPACE (282) 21
NEW (283) 73 100 231 232
OVERRIDE (284) 81
PRIVATE (285) 77
PROTECTED (286) 75
PUBLIC (287) 74
RETURN (288) 201 202
SEALED (289) 80
SHORT (290) 36
SIGNED (291) 38
STATIC (292) 78
STRUCT (293) 84
SWITCH (294) 186
THIS (295) 132
THROW (296) 203
TRY (297) 204 205 206
TYPEDEF (298) 66
UNION (299) 85
UNSIGNED (300) 39
USING (301) 11 12
VIRTUAL (302) 79
VOID (303) 137
WHILE (304) 191 192
TRUE (305) 226
FALSE (306) 227
SIZEOF (307) 244 245
IDENTIFICADOR (308) 11 13 14 19 20 23 24 54 55 66 70 72 90 91 92 93
    101 102 103 104 108 109 110 111 112 113 128 129 130 135 137 138
    139 150 151 197 200
ENTERO (309) 222
CADENA (310) 224
REAL (311) 223
CARACTER (312) 225
PTR_ACCESO (313) 235
INC (314) 241 247
DEC (315) 242 248
DESPI (316)
DESPD (317)
LE (318)
GE (319)
EQ (320) 171
NEQ (321) 254
AND (322)
OR (323)
MULT_ASIG (324) 172
DIV_ASIG (325) 173
MOD_ASIG (326) 174
SUMA_ASIG (327) 175 251
RESTA_ASIG (328) 176
DESPI_ASIG (329) 177
DESPD_ASIG (330) 178
AND_ASIG (331) 179
XOR_ASIG (332) 180
OR_ASIG (333) 181


No terminales con las reglas donde aparecen

$accept (97)
    en la izquierda: 0
declaracionMasUno (98)
    en la izquierda: 1 2, en la derecha: 1 5 6 25 26 164 165
directiva_usoMasUno (99)
    en la izquierda: 3 4, en la derecha: 3 5 26
modulo (100)
    en la izquierda: 5 6, en la derecha: 0
declaracion (101)
    en la izquierda: 7 8 9 10, en la derecha: 1 2
directiva_uso (102)
    en la izquierda: 11 12, en la derecha: 3 4
identificador_con_tiposMasUno (103)
    en la izquierda: 13 14, en la derecha: 13 15 23
nombre_tipo_o_espacio_nombres (104)
    en la izquierda: 15 16, en la derecha: 11 12 17 18 30
nombre_tipo_o_espacio_nombresMasUno (105)
    en la izquierda: 17 18, en la derecha: 17 20 94
identificador_con_tipos (106)
    en la izquierda: 19 20, en la derecha: 15 16
declaracion_espacio_nombres (107)
    en la izquierda: 21 22, en la derecha: 7
identificador_anidado (108)
    en la izquierda: 23 24, en la derecha: 21 229 230 231 232 233 235
bloque_espacio_nombres (109)
    en la izquierda: 25 26, en la derecha: 21
nombreMasUno (110)
    en la izquierda: 27 28, en la derecha: 27 29 86 87
declaracion_variable (111)
    en la izquierda: 29, en la derecha: 8 122 123
tipo (112)
    en la izquierda: 30 31, en la derecha: 29 66 86 138 139 148 149
tipo_escalar (113)
    en la izquierda: 32 33 34 35, en la derecha: 31 101 103
longitud (114)
    en la izquierda: 36 37, en la derecha: 32 34
signo (115)
    en la izquierda: 38 39, en la derecha: 32 33
tipo_basico (116)
    en la izquierda: 40 41 42 43 44, en la derecha: 32 33 34 35
nombre (117)
    en la izquierda: 45 46 47, en la derecha: 27 28
asteriscoMasUno (118)
    en la izquierda: 48 49, en la derecha: 48 50 138 148
dato (119)
    en la izquierda: 50 51, en la derecha: 45 46
corchetesMasUnoCon0OMasexpr (120)
    en la izquierda: 52 53, en la derecha: 53 54
dato_indexado (121)
    en la izquierda: 54 55, en la derecha: 50 51
valorMasUno (122)
    en la izquierda: 56 57 58, en la derecha: 56 60
valor (123)
    en la izquierda: 59 60, en la derecha: 45 56 57
declaracion_tipo (124)
    en la izquierda: 61 62 63 64 65, en la derecha: 9 117
nombramiento_tipo (125)
    en la izquierda: 66, en la derecha: 61
declaracion_campoMasUno (126)
    en la izquierda: 67 68, en la derecha: 67 69 70 71 72
declaracion_struct_union (127)
    en la izquierda: 69 70 71 72, en la derecha: 62 87
modificador (128)
    en la izquierda: 73 74 75 76 77 78 79 80 81 82 83, en la derecha:
    88 89
struct_union (129)
    en la izquierda: 84 85, en la derecha: 69 70 71
declaracion_campo (130)
    en la izquierda: 86 87, en la derecha: 67 68
modificadorMasUno (131)
    en la izquierda: 88 89, en la derecha: 71 72 88 92 93 103 104 110
    112 122 124 126 133
declaracion_interfaz (132)
    en la izquierda: 90 91 92 93, en la derecha: 63
herencia (133)
    en la izquierda: 94, en la derecha: 91 93 112 113
declaracion_metodo_interfazMasUno (134)
    en la izquierda: 95 96, en la derecha: 95 97
cuerpo_interfaz (135)
    en la izquierda: 97 98, en la derecha: 90 91 92 93
declaracion_metodo_interfaz (136)
    en la izquierda: 99 100, en la derecha: 95 96
declaracion_enum (137)
    en la izquierda: 101 102 103 104, en la derecha: 64
declaracion_miembro_enumMasUno (138)
    en la izquierda: 105 106, en la derecha: 105 107
cuerpo_enum (139)
    en la izquierda: 107, en la derecha: 101 102 103 104
declaracion_miembro_enum (140)
    en la izquierda: 108 109, en la derecha: 105 106
declaracion_clase (141)
    en la izquierda: 110 111 112 113, en la derecha: 65
declaracion_elemento_claseMasUno (142)
    en la izquierda: 114 115, en la derecha: 115 116
cuerpo_clase (143)
    en la izquierda: 116, en la derecha: 110 111 112 113
declaracion_elemento_clase (144)
    en la izquierda: 117 118 119 120 121, en la derecha: 114 115
declaracion_atributo (145)
    en la izquierda: 122 123, en la derecha: 118
declaracion_metodo (146)
    en la izquierda: 124 125, en la derecha: 119
declaracion_constructor (147)
    en la izquierda: 126 127, en la derecha: 120
cabecera_constructor (148)
    en la izquierda: 128 129 130, en la derecha: 126 127
inicializador_constructor (149)
    en la izquierda: 131 132, en la derecha: 128 129
declaracion_destructor (150)
    en la izquierda: 133 134, en la derecha: 121
cabecera_destructor (151)
    en la izquierda: 135, en la derecha: 133 134
declaracion_funcion (152)
    en la izquierda: 136, en la derecha: 10
firma_funcion (153)
    en la izquierda: 137 138 139, en la derecha: 99 100 124 125 136
argumentosMasUno (154)
    en la izquierda: 140 141, en la derecha: 140 142
parametros (155)
    en la izquierda: 142 143 144, en la derecha: 128 130 131 132 137
    138 139
variableMasUno (156)
    en la izquierda: 145 146, en la derecha: 145 147
argumentos (157)
    en la izquierda: 147, en la derecha: 140 141 142 143
nombre_tipo (158)
    en la izquierda: 148 149, en la derecha: 147 213 245 256
variable (159)
    en la izquierda: 150 151, en la derecha: 145 146
instruccion (160)
    en la izquierda: 152 153 154 155 156 157 158 159 160 161, en la derecha:
    162 163 184 185 187 188 191 192 193 194 195 196 200
instruccionMasUno (161)
    en la izquierda: 162 163, en la derecha: 162 164 166
bloque_instrucciones (162)
    en la izquierda: 164 165 166 167, en la derecha: 124 125 126 127
    133 134 136 152 204 205 206 213 214 215
instruccion_expresion (163)
    en la izquierda: 168 169, en la derecha: 153
asignacion (164)
    en la izquierda: 170, en la derecha: 169 189 190
operador_asignacion (165)
    en la izquierda: 171 172 173 174 175 176 177 178 179 180 181, en la derecha:
    170
instruccion_casoMasUno (166)
    en la izquierda: 182 183, en la derecha: 182 186
instruccion_bifurcacion (167)
    en la izquierda: 184 185 186, en la derecha: 154
instruccion_caso (168)
    en la izquierda: 187 188, en la derecha: 182 183
asignacionMasUno (169)
    en la izquierda: 189 190, en la derecha: 189 194 196
instruccion_bucle (170)
    en la izquierda: 191 192 193 194 195 196, en la derecha: 155
instruccion_salto (171)
    en la izquierda: 197 198 199, en la derecha: 156
instruccion_destino_salto (172)
    en la izquierda: 200, en la derecha: 157
instruccion_retorno (173)
    en la izquierda: 201 202, en la derecha: 158
instruccion_lanzamiento_excepcion (174)
    en la izquierda: 203, en la derecha: 159
instruccion_captura_excepcion (175)
    en la izquierda: 204 205 206, en la derecha: 160
clausula_catch_especificaMasUno (176)
    en la izquierda: 207 208, en la derecha: 207 209 211
clausulas_catch (177)
    en la izquierda: 209 210 211 212, en la derecha: 204 206
clausula_catch_especifica (178)
    en la izquierda: 213, en la derecha: 207 208
clausula_catch_general (179)
    en la izquierda: 214, en la derecha: 210 211
clausula_finally (180)
    en la izquierda: 215, en la derecha: 205 206
instruccion_vacia (181)
    en la izquierda: 216, en la derecha: 161
expresion_logica (182)
    en la izquierda: 217, en la derecha: 218 219
expresion (183)
    en la izquierda: 218 219, en la derecha: 59 108 150 170 184 185
    186 187 191 192 193 194 195 196 202 203 218 220 221 228 234
expresionMasUno (184)
    en la izquierda: 220 221, en la derecha: 52 53 194 195 220 229
    231
expresion_constante (185)
    en la izquierda: 222 223 224 225 226 227, en la derecha: 236
expresion_parentesis (186)
    en la izquierda: 228, en la derecha: 237
expresion_funcional (187)
    en la izquierda: 229 230, en la derecha: 168 238
expresion_creacion_objeto (188)
    en la izquierda: 231 232, en la derecha: 239
expresion_indexada (189)
    en la izquierda: 233 234 235, en la derecha: 170 234 235 240
expresion_postfija (190)
    en la izquierda: 236 237 238 239 240 241 242, en la derecha: 241
    242 243
expresion_prefija (191)
    en la izquierda: 243 244 245 246, en la derecha: 244 255 256
operador_prefijo (192)
    en la izquierda: 247 248 249 250 251 252 253 254, en la derecha:
    246
expresion_cast (193)
    en la izquierda: 255 256, en la derecha: 217 246


estado 0

    0 $accept: . modulo $end

    error      desplazar e ir al estado 1
    ABSTRACT   desplazar e ir al estado 2
    BOOLEAN    desplazar e ir al estado 3
    CHAR       desplazar e ir al estado 4
    CLASS      desplazar e ir al estado 5
    DOUBLE     desplazar e ir al estado 6
    ENUM       desplazar e ir al estado 7
    EXTERN     desplazar e ir al estado 8
    FLOAT      desplazar e ir al estado 9
    INT        desplazar e ir al estado 10
    INTERFACE  desplazar e ir al estado 11
    INTERNAL   desplazar e ir al estado 12
    LONG       desplazar e ir al estado 13
    NAMESPACE  desplazar e ir al estado 14
    NEW        desplazar e ir al estado 15
    OVERRIDE   desplazar e ir al estado 16
    PRIVATE    desplazar e ir al estado 17
    PROTECTED  desplazar e ir al estado 18
    PUBLIC     desplazar e ir al estado 19
    SEALED     desplazar e ir al estado 20
    SHORT      desplazar e ir al estado 21
    SIGNED     desplazar e ir al estado 22
    STATIC     desplazar e ir al estado 23
    STRUCT     desplazar e ir al estado 24
    TYPEDEF    desplazar e ir al estado 25
    UNION      desplazar e ir al estado 26
    UNSIGNED   desplazar e ir al estado 27
    USING      desplazar e ir al estado 28
    VIRTUAL    desplazar e ir al estado 29
    VOID       desplazar e ir al estado 30
    '<'        desplazar e ir al estado 31

    declaracionMasUno            ir al estado 32
    directiva_usoMasUno          ir al estado 33
    modulo                       ir al estado 34
    declaracion                  ir al estado 35
    directiva_uso                ir al estado 36
    declaracion_espacio_nombres  ir al estado 37
    declaracion_variable         ir al estado 38
    tipo                         ir al estado 39
    tipo_escalar                 ir al estado 40
    longitud                     ir al estado 41
    signo                        ir al estado 42
    tipo_basico                  ir al estado 43
    declaracion_tipo             ir al estado 44
    nombramiento_tipo            ir al estado 45
    declaracion_struct_union     ir al estado 46
    modificador                  ir al estado 47
    struct_union                 ir al estado 48
    modificadorMasUno            ir al estado 49
    declaracion_interfaz         ir al estado 50
    declaracion_enum             ir al estado 51
    declaracion_clase            ir al estado 52
    declaracion_funcion          ir al estado 53
    firma_funcion                ir al estado 54


estado 1

   22 declaracion_espacio_nombres: error . ';'

    ';'  desplazar e ir al estado 55


estado 2

   82 modificador: ABSTRACT .

    $default  reduce usando la regla 82 (modificador)


estado 3

   44 tipo_basico: BOOLEAN .

    $default  reduce usando la regla 44 (tipo_basico)


estado 4

   40 tipo_basico: CHAR .

    $default  reduce usando la regla 40 (tipo_basico)


estado 5

  111 declaracion_clase: CLASS . IDENTIFICADOR cuerpo_clase
  113                  | CLASS . IDENTIFICADOR herencia cuerpo_clase

    IDENTIFICADOR  desplazar e ir al estado 56


estado 6

   43 tipo_basico: DOUBLE .

    $default  reduce usando la regla 43 (tipo_basico)


estado 7

  101 declaracion_enum: ENUM . IDENTIFICADOR ':' tipo_escalar cuerpo_enum
  102                 | ENUM . IDENTIFICADOR cuerpo_enum

    IDENTIFICADOR  desplazar e ir al estado 57


estado 8

   83 modificador: EXTERN .

    $default  reduce usando la regla 83 (modificador)


estado 9

   42 tipo_basico: FLOAT .

    $default  reduce usando la regla 42 (tipo_basico)


estado 10

   41 tipo_basico: INT .

    $default  reduce usando la regla 41 (tipo_basico)


estado 11

   90 declaracion_interfaz: INTERFACE . IDENTIFICADOR cuerpo_interfaz
   91                     | INTERFACE . IDENTIFICADOR herencia cuerpo_interfaz

    IDENTIFICADOR  desplazar e ir al estado 58


estado 12

   76 modificador: INTERNAL .

    $default  reduce usando la regla 76 (modificador)


estado 13

   37 longitud: LONG .

    $default  reduce usando la regla 37 (longitud)


estado 14

   21 declaracion_espacio_nombres: NAMESPACE . identificador_anidado bloque_espacio_nombres

    IDENTIFICADOR  desplazar e ir al estado 59

    identificador_con_tiposMasUno  ir al estado 60
    identificador_anidado          ir al estado 61


estado 15

   73 modificador: NEW .

    $default  reduce usando la regla 73 (modificador)


estado 16

   81 modificador: OVERRIDE .

    $default  reduce usando la regla 81 (modificador)


estado 17

   77 modificador: PRIVATE .

    $default  reduce usando la regla 77 (modificador)


estado 18

   75 modificador: PROTECTED .

    $default  reduce usando la regla 75 (modificador)


estado 19

   74 modificador: PUBLIC .

    $default  reduce usando la regla 74 (modificador)


estado 20

   80 modificador: SEALED .

    $default  reduce usando la regla 80 (modificador)


estado 21

   36 longitud: SHORT .

    $default  reduce usando la regla 36 (longitud)


estado 22

   38 signo: SIGNED .

    $default  reduce usando la regla 38 (signo)


estado 23

   78 modificador: STATIC .

    $default  reduce usando la regla 78 (modificador)


estado 24

   84 struct_union: STRUCT .

    $default  reduce usando la regla 84 (struct_union)


estado 25

   66 nombramiento_tipo: TYPEDEF . tipo IDENTIFICADOR ';'

    BOOLEAN   desplazar e ir al estado 3
    CHAR      desplazar e ir al estado 4
    DOUBLE    desplazar e ir al estado 6
    FLOAT     desplazar e ir al estado 9
    INT       desplazar e ir al estado 10
    LONG      desplazar e ir al estado 13
    SHORT     desplazar e ir al estado 21
    SIGNED    desplazar e ir al estado 22
    UNSIGNED  desplazar e ir al estado 27
    '<'       desplazar e ir al estado 31

    tipo          ir al estado 62
    tipo_escalar  ir al estado 40
    longitud      ir al estado 41
    signo         ir al estado 42
    tipo_basico   ir al estado 43


estado 26

   85 struct_union: UNION .

    $default  reduce usando la regla 85 (struct_union)


estado 27

   39 signo: UNSIGNED .

    $default  reduce usando la regla 39 (signo)


estado 28

   11 directiva_uso: USING . IDENTIFICADOR '=' nombre_tipo_o_espacio_nombres ';'
   12              | USING . nombre_tipo_o_espacio_nombres ';'

    IDENTIFICADOR  desplazar e ir al estado 63

    identificador_con_tiposMasUno  ir al estado 64
    nombre_tipo_o_espacio_nombres  ir al estado 65
    identificador_con_tipos        ir al estado 66


estado 29

   79 modificador: VIRTUAL .

    $default  reduce usando la regla 79 (modificador)


estado 30

  137 firma_funcion: VOID . IDENTIFICADOR parametros

    IDENTIFICADOR  desplazar e ir al estado 67


estado 31

   30 tipo: '<' . nombre_tipo_o_espacio_nombres '>'

    IDENTIFICADOR  desplazar e ir al estado 68

    identificador_con_tiposMasUno  ir al estado 64
    nombre_tipo_o_espacio_nombres  ir al estado 69
    identificador_con_tipos        ir al estado 66


estado 32

    1 declaracionMasUno: declaracionMasUno . declaracion
    6 modulo: declaracionMasUno .

    error      desplazar e ir al estado 1
    ABSTRACT   desplazar e ir al estado 2
    BOOLEAN    desplazar e ir al estado 3
    CHAR       desplazar e ir al estado 4
    CLASS      desplazar e ir al estado 5
    DOUBLE     desplazar e ir al estado 6
    ENUM       desplazar e ir al estado 7
    EXTERN     desplazar e ir al estado 8
    FLOAT      desplazar e ir al estado 9
    INT        desplazar e ir al estado 10
    INTERFACE  desplazar e ir al estado 11
    INTERNAL   desplazar e ir al estado 12
    LONG       desplazar e ir al estado 13
    NAMESPACE  desplazar e ir al estado 14
    NEW        desplazar e ir al estado 15
    OVERRIDE   desplazar e ir al estado 16
    PRIVATE    desplazar e ir al estado 17
    PROTECTED  desplazar e ir al estado 18
    PUBLIC     desplazar e ir al estado 19
    SEALED     desplazar e ir al estado 20
    SHORT      desplazar e ir al estado 21
    SIGNED     desplazar e ir al estado 22
    STATIC     desplazar e ir al estado 23
    STRUCT     desplazar e ir al estado 24
    TYPEDEF    desplazar e ir al estado 25
    UNION      desplazar e ir al estado 26
    UNSIGNED   desplazar e ir al estado 27
    VIRTUAL    desplazar e ir al estado 29
    VOID       desplazar e ir al estado 30
    '<'        desplazar e ir al estado 31

    $end  reduce usando la regla 6 (modulo)
